выводит список с присвоением класса

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
     <div class="container">
+        <h1 class="title">Pagination on JS</h1>
         <div class="posts">
         </div>
         <div class="pagination">
